...
    }
}

enum AppLaunchMode {
    static var isUnitTestHost: Bool {
        #if DEBUG
        ProcessInfo.processInfo.environment["LABSTREAM_UNIT_TEST_HOST"] == "1"
        #else
        false
        #endif
    }
}

...
